# SVD_course_project_2_year

./: .gitmodules  README.md
course-project-second-year/: .gitignore  CMakeLists.txt  main.cpp
course-project-second-year/algorithms/: QR_algorithm.h  QR_decomposition.h  bidiagonalization.h  constants.h  givens_rotation.h  householder_reflections.h  orthonormalize.h  svd_computation.h
course-project-second-year/tests/: graphic_tests.cpp  graphic_tests.h  random_matrix.cpp  random_matrix.h  random_objects.cpp  random_objects.h  test.cpp  test_QR_decomposition.h  test_bidiagonalization.h  test_complex.h  test_matrix.h  test_orthonormalize.h  test_performance.h  test_precision.h  test_svd.h  test_vector.h
course-project-second-year/types/: complex.cpp  complex.h  matrix.h  parser.h  vector.h  vector_and_matrix.h
course-project-second-year/utils/: checking_matrices.h  complement_orthobase.h  matrix_split_join.h  parser.cpp  parser.h  set_values.h
